tests/NormalTests/paczka1/fuzzy1/65977377.err
Error in line 2: DDpbmel A427 68,1
Error in line 7: e3kfAEo S347 91,3
Error in line 25: e3kfAEo A188 198,14
Error in line 10: DDpbmel A188 54,2
